change title of portfolio

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
     </style>
     <div id="app">
       <div>
-        <p class="note">Tap/Click around to move</p>
+        <p class="note">
+          Ahmed Portfolio 2D Animation<br/>
+        Tap/Click around to move</p>
 
         <div id="textbox-container" style="display: none">
           <div id="textbox">
